fix(local): ask the shared predicate before killing a zombie
isJobReportedComplete decides whether a still-running process should be
killed, and it answered with a regex over status.json and a numeric
status >= 7. Both are things this repository says not to do.

AGENTS.md: status.json is parsed with Gson, do not replace that parser
with regexes. LocalJobMonitor.readStatusFile was migrated and records
the change in its javadoc; this call site was missed and was the last
regex parse of status.json in the tree. It matters here because the
producer writes the file in place, so a read can land mid-write: a
regex matches whatever prefix is present, where Gson refuses it.

Status.java: the terminal set is enumerated so that adding a status
forces a decision, and is pinned against the database's own
IsTerminalPairStatus by TerminalStatusContractSqlTest. A numeric >= 7
participates in neither guard and disagrees on
STATUS_PROCESSING_RESULTS(19), STATUS_PAUSED(20), STATUS_PROCESSING(22)
and every code above the highest defined one -- all of which mean work
is still owed. Killing on one of them truncates a live solver.

No behaviour changes today: the job script's 17 sendStatus call sites
emit a closed set that both predicates classify identically, and its one
wildcard is bound to a constant by the trap that installs it. This stops
the safety of the path depending on that staying true, which nothing
tested and no comment recorded. An unrecognised code now resolves to
STATUS_UNKNOWN and is not terminal, so the process is left alone and the
existing timeout path handles it.

Closes #150